User guide more detail and cross links

--- a/indexref.html
+++ b/indexref.html
@@ -7,7 +7,7 @@
     <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a> This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
   </head>
   <body>
-    <h1 style="text-align: center;">The Yoshimi User Guide V2.0.2 M</h1>
+    <h1 style="text-align: center;">The Yoshimi User Guide Vxxxx</h1>
     <img src="images/Main.png" alt="Contents Window" class="image">
     <p>
     This image is the first, and main Yoshimi window. You may want to keep this view visible while reading the guide.
