Various Doc updates Made string to int conversion safe Activated search for new manual Developed way to auto update manual version

--- a/indexref.html
+++ b/indexref.html
@@ -7,6 +7,7 @@
     <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a> This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
   </head>
   <body>
+  <!-- The next line must not be changed. It is edited at build time -->
     <h1 style="text-align: center;">The Yoshimi User Guide Vxxxx</h1>
     <img src="images/Main.png" alt="Contents Window" class="image">
     <p>
