Added an appendix to user guide

--- a/indexref.html
+++ b/indexref.html
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html><html>
+
+<!-- This file should not be edited in its 'yoshimi-code/doc/yoshimi_user_guide/index.html' form as it needs
+to be over-written with yoshimi-code/indexref.html file by yoshimi-code/update_guide_version.py which will
+set the correct version number. -->
+
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Yoshimi User Manual</title>
@@ -78,6 +83,8 @@
     <a href="yoshimi_cli.html">Command Line Interface</a>
     <br>
     <a href="cc_nrpn.html">MIDI CCs and NRPNs</a>
+    <br><br>
+    <a href="appendix.html">Appendix</a>
     <p>
     <small>Writing this user guide was a collaborative effort by the following:
     <br>
