--- a/dev_notes/Yoshimi Controls/Sections/resonance.html
+++ b/dev_notes/Yoshimi Controls/Sections/resonance.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <div id=note>Note: offset is zero for all padsynth resonance controls</div>
+  <div id=note>Note: offset is zero for all padsynth resonance controls.</div>
   <table>
     <thead>
       <tr>
