--- a/dev_notes/Yoshimi Controls/index.html
+++ b/dev_notes/Yoshimi Controls/index.html
@@ -62,6 +62,9 @@
     <br>
     <br>
     <a href="Sections/midilearn.html">MIDI-learn Controls</a>
+    <br>
+    <br>
+    <a href="Sections/midi.html">MIDI (incoming) Controls</a>
   </h3>
   </body>
 </html>
